--- a/data/headers.yml
+++ b/data/headers.yml
@@ -7,6 +7,9 @@
   icon: fa fa-book
   link: https://poe2-nav.996521.xyz/
 
+- item: 图片教程
+  icon: fa fa-book
+  link: https://poe2-nav.996521.xyz/
 #- item: 关于
 #  icon: fa fa-cog
 #  link: ""
