--- a/config.toml
+++ b/config.toml
@@ -47,3 +47,13 @@ publishDir            = "public"				# 站点静态文件保存目录
 
 [params.footer]
     copyright = '本站内容源自互联网，如有内容侵犯了你的权益，请联系删除相关内容，联系邮箱：381569432@qq.com <br/>&copy; 2021 - {year} By [WebStack-Hugo](https://github.com/shenweiyan/WebStack-Hugo)<br/>'
+
+[[menu.main]]
+name = "主副本"
+url = "/home-copy/"
+weight = 1
+
+[[menu.main]]
+name = "原主页"
+url = "/"
+weight = 2
