--- a/data/headers.yml
+++ b/data/headers.yml
@@ -11,7 +11,7 @@
 
 - item: 图片区
   icon: fa fa-book
-  list: https://blog.996521.xyz/archives/S7ayKHBR
+  link: https://blog.996521.xyz/archives/S7ayKHBR
 #    - name: About
 #      url: "/about/"
 - item: 我的b站主页
