--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -82,6 +82,8 @@
           logo: reddit-copy.png
           url: https://www.reddit.com/r/pathofexile2builds
           description: reddit论坛
+    - term: 0.3BD简单搬运 
+      links:          
         - title: 0.3BD简单搬运
           logo: ninja.png
           url: https://docs.qq.com/sheet/DR3RvbXFvYWFVbHh4?tab=BB08J2&no_promotion=1
