--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -86,7 +86,7 @@
       links:          
         - title: 0.3BD简单搬运
           logo: ninja.png
-          url: https://docs.qq.com/sheet/DR3RvbXFvYWFVbHh4?tab=BB08J2&no_promotion=1
+          url: https://docs.qq.com/sheet/DV2pITHV6bWRrTkpX?nlc=1&tab=BB08J2
           description: nag老哥制表     
 
     - term: 过滤器、查价器
